# FFT-application

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  fftw_2d.c  fftw_complex.c  fftw_many.c  fftw_mpi.c
